refactor(quality): Sonar quality gate fixes — 86 to 0 new issues